[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
chumsky = "0.9.3"
dotenv = "0.15.0"
humantime = "2.1.0"
itertools = "0.12.0"
ndarray = "0.15.6"
num-traits = "0.2.17"
petgraph = "0.6.4"
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
